<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.pngweb.tallerbasededatos.Registrar">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:padding="15dp"
        android:weightSum="1"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/txtTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.03"
            android:text="@string/registro"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="100dp"
            tools:layout_editor_absoluteY="16dp" />

        <TextView
            android:id="@+id/txtPiso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.03"
            android:text="@string/piso"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/cboPisos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.03" />

        <TextView
            android:id="@+id/txtPreciot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.03"
            android:text="@string/precio"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtPrecio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.03"
            android:ems="10"
            android:inputType="number"
            android:numeric="integer" />

        <TextView
            android:id="@+id/txtnomet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.12"
            android:text="@string/nomec"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="normal" />

        <EditText
            android:id="@+id/txtnome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.03"
            android:ems="10"
            android:inputType="numberDecimal"
            android:numeric="integer" />

        <TextView
            android:id="@+id/txtMtst2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.12"
            android:text="@string/mts"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="normal" />

        <EditText
            android:id="@+id/txtmstti"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.03"
            android:ems="10"
            android:inputType="numberDecimal"
            android:numeric="integer" />

        <TextView
            android:id="@+id/txtbalcont"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.03"
            android:text="@string/balcon"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.03"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rdsib"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/si" />

                <RadioButton
                    android:id="@+id/rdnob"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/no" />
            </RadioGroup>
        </LinearLayout>

        <TextView
            android:id="@+id/txtsombrat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.03"
            android:text="@string/sombra"
            android:textSize="18sp"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.03"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rdsis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/si" />

                <RadioButton
                    android:id="@+id/rdnos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/no" />


            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.03"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnGuardar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="guardar"
                android:text="@string/guardar" />
        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
